--- a/posts/challenge7_solutions.qmd
+++ b/posts/challenge7_solutions.qmd
@@ -39,16 +39,18 @@ Today's challenge is to:
 2)  tidy data (as needed, including sanity checks)
 3)  mutate variables as needed (including sanity checks)
 4)  Recreate at least two graphs from previous exercises, but introduce at least one additional dimension that you omitted before using ggplot functionality (color, shape, line, facet, etc) The goal is not to create unneeded [chart ink (Tufte)](https://www.edwardtufte.com/tufte/), but to concisely capture variation in additional dimensions that were collapsed in your earlier 2 or 3 dimensional graphs.
-   - Explain why you choose the specific graph type
-5) If you haven't tried in previous weeks, work this week to make your graphs "publication" ready with titles, captions, and pretty axis labels and other viewer-friendly features
+
+-   Explain why you choose the specific graph type
+
+5)  If you haven't tried in previous weeks, work this week to make your graphs "publication" ready with titles, captions, and pretty axis labels and other viewer-friendly features
 
 [R Graph Gallery](https://r-graph-gallery.com/) is a good starting point for thinking about what information is conveyed in standard graph types, and includes example R code. And anyone not familiar with Edward Tufte should check out his [fantastic books](https://www.edwardtufte.com/tufte/books_vdqi) and [courses on data visualizaton.](https://www.edwardtufte.com/tufte/courses)
 
 (be sure to only include the category tags for the data you use!)
 
-## Hotel Bookings  
+## Hotel Bookings
 
-## Read in and clean the data  
+## Read in and clean the data
 
 ```{r}
 bookings_orig<- here("posts","_data","hotel_bookings.csv") %>%
@@ -68,9 +70,9 @@ bookings %>%
   select(date_arrival)
 ```
 
-## Visualization with multiple dimensions  
+## Visualization with multiple dimensions
 
-Previously, we viusalized the variation in number of bookings across time, split by the type of hotel (`City` vs. `Resort`).  
+Previously, we viusalized the variation in number of bookings across time, split by the type of hotel (`City` vs. `Resort`).
 
 ```{r}
 bookings_month_hotel_n <- bookings %>%
@@ -91,16 +93,15 @@ bookings_month_hotel_n %>%
   theme(axis.text.x=element_text(angle=90))
 ```
 
-Let's consider splitting the data based on `meal`, the type of meal booked. 
+Let's consider splitting the data based on `meal`, the type of meal booked.
 
 ```{r}
 count(bookings, meal)
 ```
 
-From the [data source](https://www.kaggle.com/datasets/jessemostipak/hotel-booking-demand): 
-*Type of meal booked. Categories are presented in standard hospitality meal packages: Undefined/SC – no meal package; BB – Bed & Breakfast; HB – Half board (breakfast and one other meal – usually dinner); FB – Full board (breakfast, lunch and dinner)*  
+From the [data source](https://www.kaggle.com/datasets/jessemostipak/hotel-booking-demand): *Type of meal booked. Categories are presented in standard hospitality meal packages: Undefined/SC – no meal package; BB – Bed & Breakfast; HB – Half board (breakfast and one other meal – usually dinner); FB – Full board (breakfast, lunch and dinner)*
 
-Below, we recode meal to make the labels more informative, and then use `count()` to compute the number of meal bookings for each hotel across time.  
+Below, we recode meal to make the labels more informative, and then use `count()` to compute the number of meal bookings for each hotel across time.
 
 ```{r}
 bookings_month_hotel_meal_n <- bookings %>%
@@ -111,7 +112,9 @@ bookings_month_hotel_meal_n <- bookings %>%
                      HB="Half board",
                      SC="Undefined"),
          across(c(hotel, meal),as.factor)) %>%
-  count(month, hotel, meal,.drop=F) # ensures 0 is counted
+  group_by(month,hotel,meal) %>%
+  summarise(n=n()) %>%
+  ungroup()
 bookings_month_hotel_meal_n
 ```
 
@@ -123,25 +126,25 @@ ggplot(bookings_month_hotel_meal_n,aes(month, n, col=meal))+
   theme(axis.text.x=element_text(angle=90))
 ```
 
-We can then make the plot more palatable by modifying the **theme** and **color palette**. Personally, I like using the [ggthemes](https://github.com/jrnold/ggthemes) package to add a custom theme to my plots. I also use the [ggsci](https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html) package to add in a custom color palette based on the tv show Futurama. I also add in some different axis labels.  
+We can then make the plot more palatable by modifying the **theme** and **color palette**. Personally, I like using the [ggthemes](https://github.com/jrnold/ggthemes) package to add a custom theme to my plots. I also use the [ggsci](https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html) package to add in a custom color palette based on the tv show Futurama. I also add in some different axis labels.
 
 ```{r}
 ggplot(bookings_month_hotel_meal_n,aes(month, n, col=meal))+
   geom_line()+
   facet_wrap(vars(hotel))+
-  ggsci::scale_color_futurama(name="Meal Type")+
+  # ggsci::scale_color_futurama(name="Meal Type")+
+  see::scale_color_okabeito()+
   scale_x_date()+
   labs(x="Date",y="Number of Bookings")+
   ggthemes::theme_few()+
   theme(axis.text.x=element_text(angle=90))
 ```
 
-## Australian Marriage 
+## Australian Marriage
 
 This is another tabular data source published by the [Australian Bureau of Statistics](https://www.abs.gov.au/) that requires a decent amount of cleaning. In 2017, Australia conducted a postal survey to gauge citizens' opinions towards same sex marriage: "Should the law be changed to allow same-sex couples to marry?" All Australian citizens are required to vote in elections, so citizens could respond in one of four ways: vote yes, vote no, vote in an unclear way, or fail to vote. (See the "Explanatory Notes" sheet for more details.)
 
-Below we read in the data, using code previously used in the challenge 3 solution. For an explanation of the code, please see that post.  
-
+Below we read in the data, using code previously used in the challenge 3 solution. For an explanation of the code, please see that post.
 
 ### Read Data
 
@@ -165,7 +168,7 @@ vote<- vote_orig%>%
 
 ```
 
-### Visualization with Multiple Dimensions  
+### Visualization with Multiple Dimensions
 
 ```{r}
 vote %>%
@@ -186,40 +189,43 @@ vote %>%
   theme(axis.text=element_text(angle=90))
 ```
 
-## Air BnB  
+## Air BnB
 
-This is a data set from air bnb. Most of this code is exactly as it was in Challenge 5, with the added work being making the plots more palatable.  
+This is a data set from air bnb. Most of this code is exactly as it was in Challenge 5, with the added work being making the plots more palatable.
 
 ```{r}
 airb<-here("posts","_data","AB_NYC_2019.csv") %>%
   read_csv()
 
 ```
+
 ### Univariate Visualizations
 
-First, let's take a look at the distribution of prices.  
+First, let's take a look at the distribution of prices.
+
 ```{r}
 ggplot(airb,aes(price))+
   geom_histogram()
 ```
 
-Woah, there's clearly a few outliers here. 
+Woah, there's clearly a few outliers here.
 
 ```{r}
 range(airb$price)
 
 airb_filtered <- airb %>%
-  filter(price>0 & price<2500)
+  filter(price>0 & price<1500)
 airb_filtered %>%
   ggplot(aes(price))+
-  geom_histogram()
+  geom_histogram()+
+  scale_x_continuous(breaks = seq(0,1500,125))
 ```
 
-That's better. The prices look right-skewed.  
+That's better. The prices look right-skewed.
 
 ### Bivariate Visualization(s)
 
-Let's consider the different types of rooms and how they relate to price. 
+Let's consider the different types of rooms and how they relate to price.
 
 ```{r}
 airb_filtered %>%
@@ -235,6 +241,14 @@ airb_filtered %>%
   facet_wrap(vars(neighbourhood_group),scales="free")
 ```
 
+```{r}
+airb_filtered %>%
+  ggplot(aes(room_type,price))+
+  geom_boxplot()+
+  facet_wrap(vars(neighbourhood_group),scales="free")+
+  theme(axis.text.x=element_text(angle=90))
+```
+
 What about the relationship between minimum number of nights and price?
 
 ```{r}
@@ -243,23 +257,30 @@ airb_filtered %>%
   geom_point()
 ```
 
-There's probably too much variability/not enough data to draw a clear conclusion.  
+There's probably too much variability/not enough data to draw a clear conclusion.
 
 These AirBnB data are from New York City - so let's take a look at how the borough relates to price.
 
+We can order the boxplot by descending value of `price`, using the `reorder()` function and the `FUN` argument to specify that we're using *median* price.
+
 ```{r}
 airb_filtered %>%
-  ggplot(aes(neighbourhood_group,price))+
+  ggplot(aes(reorder(neighbourhood_group,-price,FUN = median),price))+
   geom_boxplot()
 ```
 
-Again, a lot of variability and skew in the data, though it makes sense that Manhattan and Brooklyn would cost the most to stay in.  
+Again, a lot of variability and skew in the data, though it makes sense that Manhattan and Brooklyn would cost the most to stay in.
 
-Let's remake that plot, but make it a little prettier.  
+Let's remake that plot, but make it a little prettier.
 
 ```{r}
+price_med <- airb_filtered %>%
+  group_by(neighbourhood_group) %>%
+  summarise(median_price=median(price,na.rm=T)) %>%
+  ungroup()
+price_med
 airb_filtered %>%
-  ggplot(aes(neighbourhood_group,price))+
+  ggplot(aes(reorder(neighbourhood_group,-price,FUN = median),price))+
   geom_boxplot(alpha=.6)+
   scale_y_continuous(labels=scales::label_dollar())+
   labs(x="Borough",
@@ -267,14 +288,14 @@ airb_filtered %>%
   ggthemes::theme_few()
 ```
 
-
-Let's compute some summary statistics and plot them. We'll compute the median (due to the skew in the data) and make bar graphs. Of course, the boxplot computes the median too, but it will be a bit easier to see when we take out the individual outliers. 
+Let's compute some summary statistics and plot them. We'll compute the median (due to the skew in the data) and make bar graphs. Of course, the boxplot computes the median too, but it will be a bit easier to see when we take out the individual outliers.
 
 ```{r}
 airb_filtered %>%
   rename(borough=neighbourhood_group) %>%
   group_by(borough) %>%
   summarise(median_price=median(price)) %>%
+  ungroup() %>%
   ggplot(aes(reorder(borough,-median_price), median_price))+
   geom_col()+
   labs(x="borough")
@@ -289,16 +310,15 @@ airb_filtered %>%
   group_by(borough) %>%
   mutate(perc=(n/sum(n))*100) %>%
   arrange(borough) %>%
-  ggplot(aes(room_type,perc,fill=room_type))+
+  ggplot(aes(room_type,perc))+
   geom_col()+
-  ggsci::scale_fill_simpsons(name="Room Type")+
   ggthemes::theme_few()+
   facet_wrap(vars(borough),scales="free_x")+
   labs(x="Room Type",y="Percent")+
   theme(axis.text.x=element_text(angle=90))
 ```
 
-## Eggs  
+## Eggs
 
 ```{r}
 eggs <- read_csv(here("posts","_data","eggs_tidy.csv"))
@@ -317,7 +337,7 @@ eggs_clean <- eggs %>%
 
 ```{r}
 ggplot(eggs_clean,aes(date,price,col=amount))+
-  geom_path()+
+  geom_point(alpha=.5)+
   scale_x_date()+
   scale_y_continuous(labels=scales::label_dollar(),limits=c(0,300))+
   facet_wrap(vars(size))+
@@ -326,4 +346,3 @@ ggplot(eggs_clean,aes(date,price,col=amount))+
   ggthemes::theme_few()+
   theme(axis.text.x=element_text(angle=90))
 ```
-
